--- a/talleres/07/buildspec-cfn.yml
+++ b/talleres/07/buildspec-cfn.yml
@@ -3,7 +3,10 @@ version: 0.2
 phases:
   build:
     commands:
-      - echo Ejecutar comando de validate-template
+      - aws cloudformation validate-template --template-body file://talleres/07/api-cfn-pipeline.yaml 
 
 artifacts:
+  discard-paths: yes
   # Archivos a exportar
+  files:
+    - talleres/07/api-cfn-pipeline.yaml
